--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -147,10 +147,13 @@ i.ico-keyword {-webkit-mask-image:url(../images/ico/ico-keyword.svg);mask-image:
 
 
 /* form */ 
-input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size:16px;font-weight:700;color:var(--typography-black);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);}
+input:not([type="checkbox"],[type="radio"],[type="file"]) {height:52px;font-size: 18px;font-weight:700;color:var(--typography-black);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:17px 16px;width:100%;caret-color:var(--status-focused);}
 input:not([type="checkbox"],[type="radio"],[type="file"])::placeholder {color:var(--typography-placeholder);font-weight:700;}
 input:not([type="checkbox"],[type="radio"],[type="file"])[readonly] {color:var(--typography-gray);border:1px solid var(--border-4);}
 input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(--typography-placeholder);border:1px solid var(--border-4);background-color:var(--status-disabled_bg);}
+
+input[type="search"] {-webkit-appearance:none;align-items:center;}
+input[type="search"]::-webkit-search-cancel-button {-webkit-appearance:none;width:24px;height:24px;flex:0 0 24px;margin-right:-3px;margin-left:0;background:url(../images/btn/ico_close.svg);align-items:center;}
 input[type="file"]:not(.inp-file) {appearance:none;-webkit-appearance:none;position:absolute;opacity:0;z-index:-100;width:0!important;height:0!important;padding:0!important;}
 input[type="file"]::-webkit-file-upload-button {display:none;}
 
@@ -168,7 +171,7 @@ input[type="datetime-local"]:after {content:'';position:absolute;right:0;top:50%
 .inp-file {display:flex;align-items:center;height:50px;background-color:var(--white);border:0;padding:0;font-size:16px;color:var(--gray950);line-height:50px;font-weight:700;width:100%;border-radius:6px;}
 .inp-file[disabled] {color:var(--gray400);}
 
-textarea {display:block;min-height:120px;font-size:16px;color:var(--typography-body);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:16px;width:100%;caret-color:var(--status-focused);}
+textarea {display:block;min-height:120px;font-size: 18px;font-weight: 400;color:var(--typography-body);border-radius:8px;border:1px solid var(--border-12);background-color:var(--background-bg_white);padding:16px;width:100%;caret-color:var(--status-focused);}
 textarea::placeholder {color:var(--typography-placeholder);font-weight:700;}
 textarea[readonly] {color:var(--typography-gray);border:1px solid var(--border-4);}
 textarea[disabled] {color:var(--typography-placeholder);border:1px solid var(--border-4);background-color:var(--status-disabled_bg);}
@@ -177,6 +180,28 @@ textarea[disabled] {color:var(--typography-placeholder);border:1px solid var(--b
 select {appearance:none;-webkit-appearance:none;font-size:16px;font-weight:700;color:var(--gray900);border-radius:6px;padding:0 34px 0 0;width:100%;height:50px;border:0;background:url(../images/form/form-select.svg) right center / 24px 24px no-repeat var(--white);}
 select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
+/* input-wrap */
+.input-wrap {position:relative;}
+/* input-wrap has input-button */
+.input-wrap.input-btn input {padding-right:52px;}
+.input-wrap.input-btn button {position:absolute;right:0;top:0;width:52px;height:52px;opacity:0;transition:opacity 0.3s ease;
+    -webkit-mask-position:center center;
+    mask-position:center center;
+    -webkit-mask-size:24px 24px;
+    mask-size:24px 24px;
+    -webkit-mask-repeat:no-repeat;
+    mask-repeat:no-repeat;
+    background-color:var(--icon-default);
+    
+}
+.input-wrap.input-btn input:not(:placeholder-shown) ~ button {opacity:1;}
+.input-wrap.input-btn input:placeholder-shown ~ button.input-search {opacity:1;}
+.input-wrap.input-btn .input-remove {-webkit-mask-image:url(../images/btn/ico_close.svg);mask-image:url(../images/btn/ico_close.svg);}
+.input-wrap.input-btn .input-search {-webkit-mask-image:url(../images/btn/ico_search.svg);mask-image:url(../images/btn/ico_search.svg);}
+.input-wrap.input-btn .input-password {-webkit-mask-image:url(../images/btn/ico_password.svg);mask-image:url(../images/btn/ico_password.svg);}
+.input-wrap.input-btn input[disabled] ~ button {background-color:var(--icon-disabled);}
+.input-wrap.input-btn input[disabled] ~ .input-remove {display:none;}
+
 
 /* input type cheeckbox */
 .inp {position:relative;}
@@ -184,22 +209,22 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .inp-large label {}
 .inp-large input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 27px;width:27px;height:27px;background:url(../images/form/form-checkbox-large.svg) center center / 24px 24px no-repeat;}
 .inp-large input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-large-checked.svg) center center / 24px 24px no-repeat;}
-.inp-large .label-title {display:block;font-size:18px;line-height:1.5;font-weight:700;color:var(--typography-title);}
-.inp-large .label-subtitle {display:block;font-size:13px;color:var(--typography-body);margin-top:8px;}
+.inp-large .label-title {display:block;font-size: 20px;line-height:1.5;font-weight:700;color:var(--typography-title);}
+.inp-large .label-subtitle {display:block;font-size: 15px;color:var(--typography-body);margin-top:8px;font-weight: 400;}
 
 .inp-medium {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp-medium label {}
 .inp-medium input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-medium.svg) center center / contain no-repeat;}
 .inp-medium input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-medium-checked.svg) center center / contain no-repeat;}
-.inp-medium .label-title {display:block;font-size:16px;line-height:1.5;color:var(--typography-gray);}
-.inp-medium .label-subtitle {display:block;font-size:13px;color:var(--typography-body);margin-top:8px;}
+.inp-medium .label-title {display:block;font-size: 18px;line-height: 1.5;color:var(--typography-gray);}
+.inp-medium .label-subtitle {display:block;font-size: 15px;font-weight: 400;color:var(--typography-body);margin-top:8px;}
 
 
 .inp-small {display:flex;justify-content:space-between;gap:8px;padding-left:32px;}
 .inp-small label {}
 .inp-small input[type="checkbox"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-checkbox-small.svg) center center / contain no-repeat;}
 .inp-small input[type="checkbox"]:checked {background:url(../images/form/form-checkbox-small-checked.svg) center center / contain no-repeat;}
-.inp-small .label-title {display:block;font-size:13px;line-height:1.6;color:var(--typography-body);margin:2px 0 1px;}
+.inp-small .label-title {display:block;font-size: 15px;font-weight: 400;line-height:1.6;color:var(--typography-body);margin:2px 0 1px;}
 .inp-small .chevron-only {margin-top:2px;}
 
 .inp-large input[type="radio"] {position:absolute;left:0;top:0px;display:flex;align-items:flex-end;justify-content:center;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;flex:0 0 24px;width:24px;height:24px;background:url(../images/form/form-radio-large.svg) center center / contain no-repeat;}
@@ -208,9 +233,9 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 /* inp-tab */
 .inp-tab {display:flex;padding:2px;background-color:var(--surface-surface50);border-radius:8px;}
 .inp-tab label {position:relative;flex:1;display:flex;align-items:center;justify-content:center;}
-.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;color:var(--typography-gray);line-height:44px;height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
+.inp-tab input[type="radio"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;font-weight: 400;color:var(--typography-gray);line-height:44px;height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;}
 .inp-tab input[type="radio"]:before {content:attr(aria-label);}
-.inp-tab input[type="radio"]:checked {background-color:var(--background-bg_white);}
+.inp-tab input[type="radio"]:checked {background-color:var(--background-bg_white);color: var(--typography-black);font-weight: 700;}
 .inp-tab input[type="radio"]:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background-color:var(--border-8);margin-top:-7px;}
 .inp-tab input[type="radio"]:checked + input[type="radio"]:after {display:none;}
 .inp-tab input[type="radio"]:checked:after {display:none;}
@@ -218,14 +243,14 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 /* inpboard */
 .inp-board {display:grid;grid-template-columns:repeat(3, 1fr);gap:4px;}
-.inp-board input[type="checkbox"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;-webkit-appearance:none;text-align:center;padding:0 8px;font-size:18px;color:var(--typography-gray);line-height:48px;height:48px;border-radius:8px;background-color:var(--surface-surface50);border:2px solid transparent;transition:background-color 0.15s ease,border-color 0.15s ease;}
+.inp-board input[type="checkbox"] {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;appearance:none;-webkit-appearance:none;text-align:center;padding:0 8px;font-size:18px;font-weight: 400;color:var(--typography-gray);line-height:48px;height:48px;border-radius:8px;background-color:var(--surface-surface50);border:2px solid transparent;transition:background-color 0.15s ease,border-color 0.15s ease;}
 .inp-board input[type="checkbox"]:before {content:attr(aria-label);}
 .inp-board input[type="checkbox"]:checked {background-color:var(--background-bg_white);border-color:var(--border-primary_enabled);font-weight:700;}
 .inp-board input[type="checkbox"]:checked + input[type="radio"]:after {display:none;}
 
 /* inp-toggle */
 .inp-toggle label {display:flex;align-items:center;gap:8px;}
-.inp-toggle .label-title {font-size:14px;color:var(--typography-gray);}
+.inp-toggle .label-title {font-size: 16px;font-weight: 400;color:var(--typography-gray);}
 .inp-toggle input {position:relative;display:flex;flex:0 0 42px;width:42px;height:24px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:42px;transition:background-color 0.15s ease;}
 .inp-toggle input:before {content:'';position:absolute;left:3px;top:3px;width:18px;height:18px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:18px;transition:left 0.15s ease;}
 .inp-toggle input:checked {background-color:var(--brandPrimary-blue500);}
@@ -268,9 +293,9 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 /* form */
 .form {flex:1;}
-.form .label {display:flex;align-items:center;font-size:14px;line-height:1;color:var(--typography-black);margin-bottom:8px;}
+.form .label {display:flex;align-items:center;font-size: 16px;font-weight: 400;line-height:1;color:var(--typography-black);margin-bottom:8px;}
 .form .label:empty {display:none;}
-.form .validate-text {font-size:13px;color:var(--typography-caption);margin-top:2px;}
+.form .validate-text {font-size: 15px;font-weight: 400;color:var(--typography-caption);margin-top:2px;}
 .form .validate-text:empty {margin-top:0;}
 .form-invalid .input-wrap input {border:1px solid var(--status-error);background-color:var(--background-bg_lightRed);}
 .form-invalid .validate-text {color:var(--status-error);}
@@ -280,28 +305,6 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 .form + .form {margin-top:8px;}
 
 .form-wrap {display:flex;gap:8px;}
-
-/* input-wrap */
-.input-wrap {position:relative;}
-/* input-wrap has input-button */
-.input-wrap.input-btn input {padding-right:52px;}
-.input-wrap.input-btn button {position:absolute;right:0;top:0;width:52px;height:52px;opacity:0;transition:opacity 0.3s ease;
-    -webkit-mask-position:center center;
-    mask-position:center center;
-    -webkit-mask-size:24px 24px;
-    mask-size:24px 24px;
-    -webkit-mask-repeat:no-repeat;
-    mask-repeat:no-repeat;
-    background-color:var(--icon-default);
-    
-}
-.input-wrap.input-btn input:not(:placeholder-shown) ~ button {opacity:1;}
-.input-wrap.input-btn input:placeholder-shown ~ button.input-search {opacity:1;}
-.input-wrap.input-btn .input-remove {-webkit-mask-image:url(../images/btn/ico_close.svg);mask-image:url(../images/btn/ico_close.svg);}
-.input-wrap.input-btn .input-search {-webkit-mask-image:url(../images/btn/ico_search.svg);mask-image:url(../images/btn/ico_search.svg);}
-.input-wrap.input-btn .input-password {-webkit-mask-image:url(../images/btn/ico_password.svg);mask-image:url(../images/btn/ico_password.svg);}
-.input-wrap.input-btn input[disabled] ~ button {background-color:var(--icon-disabled);}
-.input-wrap.input-btn input[disabled] ~ .input-remove {display:none;}
 
 /* tab-content */ 
 .tab-content {}
@@ -388,9 +391,9 @@ select[disabled] {background-color:var(--graye6);color:var(--graya7);}
 
 /* tags */
 .tags {display:flex;vertical-align:top;width:fit-content;}
-.tags-small {font-size:13px;font-weight:500;line-height:1;padding:4px 8px;border-radius:4px;}
-.tags-medium {font-size:14px;font-weight:500;line-height:1;padding:8px 12px;border-radius:8px;}
-.tags-large {font-size:16px;font-weight:500;line-height:1;padding:10px 12px;border-radius:8px;}
+.tags-small {font-size: 15px;font-weight:500;line-height:1;padding:4px 8px;border-radius:4px;}
+.tags-medium {font-size: 16px;font-weight:500;line-height:1;padding:8px 12px;border-radius:8px;}
+.tags-large {font-size: 18px;font-weight:500;line-height:1;padding:10px 12px;border-radius:8px;}
 
 .tags-lightBlue {color:var(--blue-600);background-color:var(--background-bg_lightBlue)}
 .tags-lightGray {color:var(--typography-gray);background-color:var(--background-bg_lightGray)}
