--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -146,8 +146,18 @@
 					<dt>Search Text</dt>
 					<dd>
 						<div class="form">
+							<div class="input-wrap">
+								<input type="search" placeholder="Placeholder" value="Text">
+							</div>
+						</div>
+					</dd>
+				</dl>
+				<dl>
+					<dt>Search Text <span>With Button</span></dt>
+					<dd>
+						<div class="form">
 							<div class="input-wrap input-btn">
-								<input type="text" placeholder="Placeholder" value="Text">
+								<input type="search" placeholder="Placeholder" value="Text">
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 						</div>
