--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -34,10 +34,11 @@ header {position:sticky;left:0;top:0;width:100%;z-index:var(--header-zIndex);bac
 .main-header .right {display:flex;gap:2px;right:12px;}
 
 .main-header .header-btn {flex:0 0 40px;width:40px;height:52px;display:flex;align-items:center;justify-content:center;}
-.header-btn i {flex:0 0 24px;width:24px;height:24px;}
-.header-btn .i-back {background:url(../images/header/ico_back.svg) center center / contain no-repeat;}
-.header-btn .i-menu {background:url(../images/header/ico_menu.svg) center center / contain no-repeat;}
-.header-btn .i-favorite {background:url(../images/header/ico_favorite.svg) center center / contain no-repeat;}
+.header-btn i {flex:0 0 40px;width:40px;height:40px;}
+.header-btn:active i {background-color:var(--background-bg_gray);border-radius:50%;}
+.header-btn .i-back {background:url(../images/header/ico_back.svg) center center / 24px 24px no-repeat;}
+.header-btn .i-menu {background:url(../images/header/ico_menu.svg) center center / 24px 24px no-repeat;}
+.header-btn .i-favorite {background:url(../images/header/ico_favorite.svg) center center / 24px 24px no-repeat;}
 
 /* main */
 main {position:relative;min-height:100vh;background-color:var(--white-100);}
