--- a/html/components/component_text_items.html
+++ b/html/components/component_text_items.html
@@ -79,10 +79,10 @@
 		<div class="ui-guide-section">
 			<h2>Description</h2>
 			<div class="ui-guide-box">
-				<p class="description success">description info</p>
-				<p class="description info">description info</p>
-				<p class="description caution">description caution</p>
-				<p class="description error">description caution</p>
+				<p class="description success title-medium">description info</p>
+				<p class="description info title-medium">description info</p>
+				<p class="description caution title-medium">description caution</p>
+				<p class="description error title-medium">description caution</p>
 			</div>
 			<h2>Size</h2>
 			<div class="ui-guide-box">
