--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -120,7 +120,12 @@
 							<div class="input-wrap">
 								<textarea title="메모"></textarea>
 							</div>
-							<div class="textarea-length">0/300자</div>
+							<div class="textarea-length">
+								<div class="left">0/300자</div>
+                                <div class="right">
+                                    <button type="button" class="btn-small btn-primary btn-round">저장</button>
+                                </div>
+							</div>
 						</div>
 					</dd>
 				</dl>
