--- a/html/components/component_button_icon.html
+++ b/html/components/component_button_icon.html
@@ -80,7 +80,8 @@
 				<button type="button" class="btn-large btn-primary"><i class="ico-share"></i><span>공유</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-check"></i><span>Check</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-add"></i><span>명함 등록</span></button>
-				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth"></i><span>생체인증 로그인</span></button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-ios"></i><span>생체인증 로그인</span></button>
+				<button type="button" class="btn-large btn-primary"><i class="ico-bio-auth-android"></i><span>생체인증 로그인</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-refresh"></i><span>다시 시도</span></button>
 				<button type="button" class="btn-large btn-primary"><i class="ico-login02"></i><span>통합 로그인</span></button>
 			</div>
