--- a/html/components/component_group.html
+++ b/html/components/component_group.html
@@ -107,7 +107,7 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap">
-								<input type="text" placeholder="별칭">
+								<input type="search" placeholder="별칭">
 							</div>
 							<p class="validate-text"></p>
 						</div>
