--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -189,7 +189,7 @@
 
 /* step-end */
 .step-end {display:inline-flex;flex-direction:column;align-items:center;background-color:var(--white-100);padding:48px;margin:0 auto;}
-.step-end p {text-align:center;margin-top: 24px;font-weight:700;}
+.step-end p {text-align:center;margin-top: 12px;font-size: 24px;line-height: 1.4;font-weight:700;}
 
 /* memo-list */
 .memo-list {}
