--- a/html/components/component_card.html
+++ b/html/components/component_card.html
@@ -72,6 +72,7 @@
 		<div class="ui-guide-section">
 
 			<div class="ui-guide-box">
+				<h2>Card Select</h2>
 				<!-- card-select -->
 				<div class="card-select">
 					<div class="inp inp-large">
@@ -92,6 +93,7 @@
 			<hr>
 
 			<div class="ui-guide-box">
+				<h2>Business Card Customer List</h2>
 
 
 				<!-- business-card-customer -->
@@ -174,42 +176,48 @@
 				<!-- //business-card-customer -->
 
 			</div>
-
 			<hr>
 
 			<div class="ui-guide-box">
-
-				<!-- upload-picture -->
-				<div class="upload-picture">
-					<div class="upload-type-select">
-						<button type="button" class="upload-gallery">갤러리</button>
-						<button type="button" class="upload-camera">카메라</button>
+				<h2>Fund Card</h2>
+				<div class="fund-card-list">
+					<div class="fund-card">
+						<div class="recommend">추천</div>
+						<div class="tag-wrap">
+							<div class="tags tags-small tags-lightRed">#높은위험</div>
+							<div class="tags tags-small tags-lightYellow">#원금손실가능</div>
+						</div>
+						<a href="#">피델리티글로벌배당인컴증권자투자신탁(주식-재간접형)</a>
+						<div class="divide-list">
+							<span>글로벌</span>
+							<div class="division h12 mx8"></div>
+							<span>수수료선취 · 온라인</span>
+						</div>
+						<dl class="expect-list">
+							<div class="list">
+								<dt>1개월</dt>
+								<dd>-888.88%</dd>
+							</div>
+							<div class="list rise">
+								<dt>3개월</dt>
+								<dd>+888.88%</dd>
+							</div>
+							<div class="list">
+								<dt>6개월</dt>
+								<dd>-888.88%</dd>
+							</div>
+							<div class="list">
+								<dt>12개월</dt>
+								<dd>-888.88%</dd>
+							</div>
+						</dl>
+                        <dl class="expect-reason">
+                            <dt>추천사유</dt>
+                            <dd>텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다 텍스트가 들어갑니다</dd>
+                        </dl>
+                        
 					</div>
 				</div>
-				<!-- //upload-picture -->
-
-				<!-- upload-picture -->
-				<div class="upload-picture">
-					<picture>
-						<source srcset="../../resources/images/@temp/@business_card.png">
-						<img src="../../resources/images/@temp/@business_card.png" alt="">
-					</picture>
-					<div class="picture-dimmed">
-						<button type="button" class="btn-noborder btn-noborder-text-shadow px4 py6"><i class="ico-delete-shadow"></i>삭제</button>
-					</div>
-				</div>
-				<!-- //upload-picture -->
-
-				<!-- upload-picture -->
-				<div class="upload-picture">
-					<button type="button" aria-label="이미지 확대보기">
-						<picture>
-							<source srcset="../../resources/images/@temp/@business_card.png">
-							<img src="../../resources/images/@temp/@business_card.png" alt="">
-						</picture>
-					</button>
-				</div>
-				<!-- //upload-picture -->
 
 			</div>
 
